chore: 2nd attempt to fix file structure

--- a/data/hero.yml
+++ b/data/hero.yml
@@ -1,5 +1,5 @@
-title: "Welcome to my landing page"
-subtitle: "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga animi
+heading: "Welcome to my landing page"
+subheading: "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga animi
             quae labore numquam iste, cumque adipisci maxime neque. Enim fugit
             atque, iusto modi at officia dignissimos voluptatibus deleniti sequi
             vero magnam velit natus repudiandae odio aliquam mollitia repellat
