--- a/config.yml
+++ b/config.yml
@@ -10,7 +10,7 @@ collections:
         label: "Hero"
         name: "hero"
         fields:
-          - { name: "title", label: "Title", widget: "string" }
-          - { name: "subtitle", label: "Subtitle", widget: "string" }
+          - { name: "heading", label: "Heading", widget: "string" }
+          - { name: "subheading", label: "Subheading", widget: "string" }
           - { name: "background_image", label: "Background Image", widget: "image" }
 
